force-app/main/default/objects/Document_Template__c/Document_Template__c.object-meta.xml
<CustomObject>
    <description>Document Template object to store all the different type of forms (Parent of Document Content Object)</description>
    <label>Document Template</label>
    <nameField>
        <label>Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>