force-app/main/default/objects/Document_Template__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Contains additional info string in JSON format.</description>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>