force-app/main/default/objects/Document_Template__c/fields/Allow_Attach_As_PDF__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attach_As_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to allow configuration for attaching the documents generated from template to the records as attachment.</description>
    <label>Allow Attach As PDF To Record</label>
    <type>Checkbox</type>
</CustomField>