force-app/main/default/objects/Document_Template__c/fields/Allow_Esign__c.field-meta.xml
<CustomField>
    <fullName>Allow_Esign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to allow configuration for sending the documents generated from template for esign.</description>
    <label>Allow Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>