force-app/main/default/objects/Document_Template__c/fields/Allow_Send_As_Email_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Send_As_Email_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to allow configuration for sending the documents generated from template to the records as email attachment.</description>
    <label>Allow Send As Email Attachment</label>
    <type>Checkbox</type>
</CustomField>