force-app/main/default/objects/Document_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description says what is this form for..? and where it is used..?</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>