force-app/main/default/objects/Document_Template__c/fields/Is_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Is_ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ReadOnly</label>
    <type>Checkbox</type>
</CustomField>