force-app/main/default/objects/Document_Template__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>US Legal</fullName>
            </value>
            <value>
                <fullName>US Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>