force-app/main/default/objects/Document_Template__c/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>