force-app/main/default/objects/Document_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Related Templates</relationshipLabel>
    <relationshipName>Related_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>