force-app/main/default/objects/Document_Template__c/fields/Template_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_External_Id__c</fullName>
    <description>Template External Id used to import the templates.</description>
    <externalId>true</externalId>
    <label>Template External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>