force-app/main/default/objects/Document_Template__c/fields/Template_Name_And_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Name_And_Version__c</fullName>
    <label>Template Name And Version</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>