force-app/main/default/objects/Document_Template__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <description>Version of the Template</description>
    <label>Template Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>