force-app/main/default/objects/Document_Template__c/listViews/Active_Templates.listView-meta.xml
<ListView>
    <fullName>Active_Templates</fullName>
    <columns>NAME</columns>
    <columns>Template_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Templates</label>
</ListView>