force-app/main/default/objects/Document_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Parent_Object_Name__c</columns>
    <columns>Template_Version__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Default__c</columns>
    <columns>Page_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>